# go2w_real

./: .gitignore  CMakeLists.txt  README.md  package.xml
auto_explore/: CMakeLists.txt  package.xml
auto_explore/config/: explore_params.yaml  laser_filter.yaml  nav2_params_foxy.yaml
auto_explore/docs/: data_flow_checklist.md  guideline.md  weekly_report_2026_03_11.md  weekly_report_2026_03_15.md
auto_explore/include/go2w_auto_explore/: exploration_types.hpp  frontier_search.hpp  gvd_map.hpp
auto_explore/launch/: auto_explore.launch.py
auto_explore/rviz/: auto_explore.rviz
auto_explore/scripts/: activate_nav2.sh  auto_explore_standalone.py  frontier_explorer.py  frontier_explorer_foxy.py  official_slam_odom_bridge.py  pointcloud_relay.py  scan_to_gridmap.py  slam_client.py  wait_for_transform.py
auto_explore/src/: frontier_explorer.cpp  frontier_search.cpp  gvd_map.cpp
auto_explore/urdf/: const.xacro  go2w_real.urdf  go2w_real.urdf.xacro
behavior_trees/: navigate_to_pose_w_explore.xml  navigate_w_replanning_and_recovery_fast.xml
config/: frontier_explorer_params.yaml  go2w_map_waypoints.yaml  go2w_motion_executor.yaml  go2w_waypoints.yaml  laser_filter.yaml  nav2_params.yaml  nav2_params_foxy copy.yaml  nav2_params_foxy.yaml  nav2_params_official_slam.yaml  navigation_headless.yaml  odom_fusion_lowstate_rf2o.yaml  odom_fusion_params.yaml  slam_mapping_params.yaml  slam_params.yaml
docs/: lf_sportmodestate_odom_straight_test_report_2026_04_27.md  lowstate_imu_followup_test_report_2026_04_27.md  lowstate_imu_static_test_report_2026_04_27.md  lowstate_rf2o_ekf_fusion_plan_2026_04_27.md  navigation_executor_zh.md  navigation_sender_zh.md  new_slam_integration_zh.md  operator_console_zh.md  profile_nav_stack_zh.md  session_technical_report_20260403.md  utlidar_imu_lowstate_yaw_turn_test_report_2026_04_27.md  weekly_report_2026_04_23.md  work_report_2026_04_17_to_04_30.md
go2w_real/: __init__.py  headless_config.py  imu_fusion_bridges.py  motion_executor_geometry.py  motion_executor_logic.py  motion_executor_node.py  motion_executor_types.py
include/go2w_real/: exploration_types.hpp  frontier_blacklist_policy.hpp  frontier_goal_selector.hpp  frontier_navigation_result_policy.hpp  frontier_search.hpp
launch/: auto_explore.launch.py  auto_mapping.launch.py  bringup.launch.py  nav2.launch.py  nav2_official_slam.launch.py  slam_mapping.launch.py  slam_rf2o.launch.py  slam_teleop.launch.py
map/: zt_0_occ.pgm  zt_0_occ.yaml
operator_console/: deploy.sh  launch_manager.py  profiles.yaml
operator_console/systemd/: foxglove-bridge.service  launch-manager.service
operator_console/web/: foxglove-layout.json  index.html
rviz/: nav2_real.rviz  slam_mapping.rviz
scripts/: emergency_stop.py  go2_motion_command.py  go2w_bridge.py  go2w_motion_executor.py  lowstate_imu_bridge.py  multi_source_odom_bridge.py  navigate_to_waypoint.py  navigate_to_waypoint_with_debug_bag.sh  navigation_debug_bag_topics.sh  navigation_executor.py  navigation_headless_config.py  navigation_sender_test_poi001.py  odom_imu_motion_test.py  official_slam_odom_bridge.py  pointcloud_relay.py  profile_nav_stack.py  save_map_and_waypoints.py  start_navigation_headless.sh  start_navigation_no_server.sh  utlidar_imu_adapter.py  wait_for_topic_rate.py  wait_for_transform.py  xt16_driver_timefix.sh
src/: frontier_explorer.cpp  frontier_goal_selector.cpp  frontier_search.cpp
test/: conftest.py  test_go2w_bridge_deadband.py  test_headless_config.py  test_imu_fusion_bridges.py  test_motion_executor_geometry.py  test_motion_executor_launch_config.py  test_motion_executor_logic.py  test_motion_executor_types.py  test_nav2_controller_config.py  test_navigate_to_waypoint.py  test_navigate_to_waypoint_debug_bag.py  test_navigation_executor.py  test_odom_fusion_config.py  test_odom_imu_motion_test.py  test_operator_console.py  test_pointcloud_relay.py  test_save_map_and_waypoints.py  test_slam_localization_config.py  test_start_navigation_headless.py  test_wait_for_transform.py
urdf/: go2w_real.urdf.xacro
